ags (0.7.96)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed in ags_midi_buffer_util.c some missing return values and other issues
	* improved test coverage of ags_midi_buffer_util.c to almost completed

ags (0.7.95)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed unit test ags_midi_buffer_util_get_song_select()

ags (0.7.94)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed unit test ags_recall_test_duplicate() to have proper type in callback
	* extended ags_midi_test.c to provide more unit tests

ags (0.7.93)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed automation edit restore from simple file

ags (0.7.92)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added unit tests of ags_midi_buffer_util.c
	* fixed ags_midi_buffer_put_varlength(), it was defunctional
	* fixed missing check of AgsRecallDssi in ags_channel.c

ags (0.7.91)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added unit tests in ags_automation_test.c and ags_recall_test.c
	* fixed automation toolbar to toggle port correctly and added empty port
	* fixed ags_midi_buffer_util.c, ags_midi_builder.c and ags_midi_parser.c to conform MIDI specs
	* NOTE arguments are shifted for MIDI SMTPE related functions

ags (0.7.90)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed handle NULL pointer client don't pass it to JACK
	* back-ported ags_midi_buffer_util.[ch] from 1.0
	* back-ported ags_midi_builder.[ch] from 1.0

ags (0.7.89)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed crash after opening file with unavailable audio file link
	* improved mutices in ags_editor_tic_callback()

ags (0.7.88)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing usage of attack affects BPM
	* fixed code performance issue in ags-play-notation recall
	* removed free-wheel within jack client because not supported